Fixed white space under footer

--- a/src/targets/national/styles/views/footer.less
+++ b/src/targets/national/styles/views/footer.less
@@ -152,3 +152,8 @@ footer {
     }
   }
 }
+floating-bar.hide + footer {
+  .viewport-mobile & {
+    margin-bottom:0;
+  }
+}
